MAGNOLIA-3568: - separated the framework, widgetset and vaadin support
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42859 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-vaadin/pom.xml
+++ b/magnolia-module-vaadin/pom.xml
@@ -16,21 +16,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-user</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.collections</groupId>
-	  <artifactId>google-collections</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.vaadin.addons</groupId>
-      <artifactId>vaadin-treetable</artifactId>
     </dependency>
     <dependency>
 	  <groupId>org.vaadin.addons</groupId>
@@ -41,8 +28,20 @@
         <artifactId>servlet-api</artifactId>
         <scope>provided</scope>
       </dependency>
+     <dependency>
+     	<groupId>info.magnolia</groupId>
+     	<artifactId>magnolia-ui-framework</artifactId>
+     	<version>5.0-SNAPSHOT</version>
+     	<type>jar</type>
+     	<scope>compile</scope>
+     </dependency>
+     <dependency>
+     	<groupId>info.magnolia</groupId>
+     	<artifactId>magnolia-vaadin-widgetset</artifactId>
+     	<version>5.0-SNAPSHOT</version>
+     </dependency>
   </dependencies>
-  <description>Takes care of all gwt compilation for client side widgets.</description>
+  <description>The vaadin integration into Magnolia CMS.</description>
   <build>
     <plugins>
      <plugin>
@@ -70,31 +69,6 @@
          </executions>
        </plugin>
       <!-- Compile custom GWT components or widget dependencies with the GWT compiler -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.1.0-1</version>
-        <configuration>
-          <!-- put the created resources on the classpath -->
-          <webappDirectory>target/classes/mgnl-resources/VAADIN/widgetsets</webappDirectory>
-          <!-- the target/classes directory is cleaned regularly. You can use mvn gwt:compile -Dgwt.inplace to store the output in the resource folder-->
-          <warSourceDirectory>src/main/resources/mgnl-resources/VAADIN/widgetsets</warSourceDirectory>
-          <!-- this is not a webapp -->
-          <noServer>true</noServer>
-          <module>info.magnolia.vaadin.widgetset.MagnoliaWidgetset</module>
-          <!-- <draftCompile>true</draftCompile> -->
-          <!-- <style>PRETTY</style> -->
-          <runTarget>.magnolia/admin-central</runTarget>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>resources</goal>
-              <goal>compile</goal>
-             </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
 </build>
 </project>
