MAGNOLIA-3568: package renaming
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42876 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -53,7 +53,7 @@
           <warSourceDirectory>src/main/resources/mgnl-resources/VAADIN/widgetsets</warSourceDirectory>
           <!-- this is not a webapp -->
           <noServer>true</noServer>
-          <module>info.magnolia.vaadin.widgetset.MagnoliaWidgetset</module>
+          <module>info.magnolia.ui.vaadin.widgetset.MagnoliaWidgetset</module>
           <!-- <draftCompile>true</draftCompile> -->
           <!-- <style>PRETTY</style> -->
           <runTarget>.magnolia/admin-central</runTarget>
