back to former default values
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42877 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -43,4 +43,4 @@ magnolia.connection.jcr.userId = admin
 magnolia.connection.jcr.password = admin
 
 # Set it to true if bootstrapping/update should be performed automatically
-magnolia.update.auto=true
+magnolia.update.auto=false
