MAGNOLIA-3568: separation of the model - does not yet compile = hudson does not poll for the moment
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42904 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -682,6 +682,7 @@ for Java Content Repositories (JCR).
 
     <!-- New Magnolia 5.0 UI -->
     <module>magnolia-ui-framework</module>
+    <module>magnolia-ui-model</module>
     <module>magnolia-ui-vaadin-widgetset</module>
     <module>magnolia-ui-vaadin-integration</module>
     <module>magnolia-ui-admincentral</module>
