--- a/magnolia-ui-model/pom.xml
+++ b/magnolia-ui-model/pom.xml
@@ -6,44 +6,16 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>magnolia-ui-admincentral</artifactId>
-  <name>magnolia-ui-admincentral</name>
+  <artifactId>magnolia-ui-model</artifactId>
+  <name>magnolia-ui-model</name>
   <packaging>jar</packaging>
-  <description>AdminCentral</description>
+  <description>Registration and definition of ui components like dialogs and trees.</description>
   <dependencies>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.vaadin.addons</groupId>
-      <artifactId>vaadin-treetable</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-user</artifactId>
-      <scope>provided</scope>
-    </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-templating</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-cache</artifactId>
-      <version>${project.version}</version>
-      </dependency>
-    <dependency>
-      <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-ui-vaadin-integration</artifactId>
-      <version>${project.version}</version>
-      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -65,11 +37,6 @@
       <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>info.magnolia</groupId>
-    	<artifactId>magnolia-ui-model</artifactId>
-    	<version>5.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
