--- a/magnolia-ui-model/pom.xml
+++ b/magnolia-ui-model/pom.xml
@@ -38,6 +38,12 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>info.magnolia</groupId>
+    	<artifactId>magnolia-ui-framework</artifactId>
+    	<version>5.0-SNAPSHOT</version>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
