MAGNOLIA-3563 - SimpleEventBus now supports adding and removing handlers while dispatching an event - SimpleEventBus and ResettableEventBus are now thread safe - TestCase for SimpleEventBus
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43008 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-framework/pom.xml
+++ b/magnolia-ui-framework/pom.xml
@@ -11,6 +11,10 @@
   <name>magnolia-ui-framework</name>
   <dependencies>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
       <version>${project.version}</version>
