--- a/magnolia-ui-model/pom.xml
+++ b/magnolia-ui-model/pom.xml
@@ -44,6 +44,13 @@
     	<version>5.0-SNAPSHOT</version>
     	<scope>compile</scope>
     </dependency>
+
+    <!-- needed by some tests -->
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>servlet-api</artifactId>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
