JCR based security. As of this commit, Magnolia no longer checks permissions on nodes, but delegates this operation to the JCR layer itself. Work in progress.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43263 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/jaas.config
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/jaas.config
@@ -10,10 +10,8 @@
  */
 
 magnolia {
+  // ensure user is who he claims he is (check pwd for the user)
   info.magnolia.jaas.sp.jcr.JCRAuthenticationModule requisite;
+  // retrieve users ACLs
   info.magnolia.jaas.sp.jcr.JCRAuthorizationModule required;
-};
-
-Jackrabbit {
-  org.apache.jackrabbit.core.security.SimpleLoginModule required;
 };
