--- a/magnolia-ui-model/pom.xml
+++ b/magnolia-ui-model/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-project</artifactId>
-    <version>5.0-m3</version>
+    <version>5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -41,7 +41,7 @@
     <dependency>
     	<groupId>info.magnolia</groupId>
     	<artifactId>magnolia-ui-framework</artifactId>
-    	<version>5.0-m3</version>
+    	<version>5.0-SNAPSHOT</version>
     	<scope>compile</scope>
     </dependency>
 
