--- a/magnolia-ui-vaadin-integration/pom.xml
+++ b/magnolia-ui-vaadin-integration/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-project</artifactId>
-    <version>5.0-m3</version>
+    <version>5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>magnolia-ui-vaadin-integration</artifactId>
@@ -31,14 +31,14 @@
      <dependency>
      	<groupId>info.magnolia</groupId>
      	<artifactId>magnolia-ui-framework</artifactId>
-     	<version>5.0-m3</version>
+     	<version>5.0-SNAPSHOT</version>
      	<type>jar</type>
      	<scope>compile</scope>
      </dependency>
      <dependency>
      	<groupId>info.magnolia</groupId>
      	<artifactId>magnolia-ui-vaadin-widgetset</artifactId>
-     	<version>5.0-m3</version>
+     	<version>5.0-SNAPSHOT</version>
      </dependency>
   </dependencies>
   <description>The vaadin integration into Magnolia CMS.</description>
