MAGNOLIA-3536 Webapp contains two version of jdom. Port of r41720 r43923
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43982 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -62,6 +62,17 @@
     <dependency>
       <groupId>org.openwfe</groupId>
       <artifactId>openwfe-jcr</artifactId>
+        <exclusions>
+          <!-- Excluded in favor of org.jdom:jdom -->
+          <exclusion>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+          </exclusion>
+        </exclusions>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
@@ -127,6 +138,17 @@
     <dependency>
       <groupId>jaxen</groupId>
       <artifactId>jaxen</artifactId>
+      <exclusions>
+        <!-- Excluded in favor of org.jdom:jdom -->
+        <exclusion>
+          <groupId>jdom</groupId>
+          <artifactId>jdom</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>servlets.com</groupId>
