--- a/magnolia-module-templating-components/pom.xml
+++ b/magnolia-module-templating-components/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>magnolia-project</artifactId>
@@ -50,13 +51,10 @@
       <artifactId>magnolia-gui</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
-    <!-- dependency
-      TODO needed for ParagraphSelectDialog - but currently circular, so see note in info.magnolia.module.templatingcomponentsomponents.EditBar
-      <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-admininterface</artifactId>
-      <version>4.4-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency-->
+    <!-- dependency TODO needed for ParagraphSelectDialog - but currently
+      circular, so see note in info.magnolia.module.templatingcomponentsomponents.EditBar
+      <groupId>info.magnolia</groupId> <artifactId>magnolia-module-admininterface</artifactId>
+      <version>4.4-SNAPSHOT</version> <scope>provided</scope> </dependency -->
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-templating</artifactId>
