MAGNOLIA-3641 - heureka: added exclusion that finally fixed the build in eclipse (without build was only working on console or in IDEA). Free beer for everybody!
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44139 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating-components/pom.xml
+++ b/magnolia-module-templating-components/pom.xml
@@ -92,6 +92,12 @@
       <groupId>net.sourceforge.openutils</groupId>
       <artifactId>openutils-testing4web</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.htmlunit</groupId>
