--- a/magnolia-module-wcm/pom.xml
+++ b/magnolia-module-wcm/pom.xml
@@ -33,4 +33,34 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <!-- Compile custom GWT components or widget dependencies with the GWT compiler -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>gwt-maven-plugin</artifactId>
+        <version>2.1.0-1</version>
+        <configuration>
+          <!-- put the created resources on the classpath -->
+          <webappDirectory>target/classes/mgnl-resources/VAADIN/widgetsets</webappDirectory>
+          <!-- the target/classes directory is cleaned regularly. You can use mvn gwt:compile -Dgwt.inplace to store the output in the resource folder-->
+          <warSourceDirectory>src/main/resources/mgnl-resources/VAADIN/widgetsets</warSourceDirectory>
+          <!-- this is not a webapp -->
+          <noServer>true</noServer>
+          <module>info.magnolia.module.wcm.widgetset.PageEditorWidgetset</module>
+          <!-- <draftCompile>true</draftCompile> -->
+          <!-- <style>PRETTY</style> -->
+          <runTarget>.magnolia/admin-central</runTarget>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>resources</goal>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
