added lazy load wrapper addon
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44423 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -29,8 +29,12 @@
       <artifactId>vaadin-treetable</artifactId>
     </dependency>
     <dependency>
-	  <groupId>org.vaadin.addons</groupId>
-	  <artifactId>confirmdialog</artifactId>
+      <groupId>org.vaadin.addons</groupId>
+      <artifactId>confirmdialog</artifactId>
+     </dependency>
+     <dependency>
+       <groupId>org.vaadin.addons</groupId>
+       <artifactId>lazyloadwrapper</artifactId>
      </dependency>
      <dependency>
         <groupId>javax.servlet</groupId>
