MAGNOLIA-3623 - Added PageEditor widget - Moved Historian to ui-vaadin-integration - ui-vaadin-integration and module-wcm bundle their source - ui-vaadin-widgetset now depends on module-wcm and vaadin-integration and compiles its widgets
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44451 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -66,6 +66,11 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-ui-vaadin-widgetset</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
       <version>${project.version}</version>
     </dependency>
