MAGNOLIA-3623 - Added widgetset to MANIFEST.MF - Added extraction of vaadin themes in ui-vaadin-widgetset pom
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44458 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-wcm/pom.xml
+++ b/magnolia-module-wcm/pom.xml
@@ -61,6 +61,7 @@
             <manifestEntries>
               <!-- Package format version - do not change -->
               <Vaadin-Package-Version>1</Vaadin-Package-Version>
+              <Vaadin-Widgetsets>info.magnolia.module.wcm.editor.PageEditorWidgetset</Vaadin-Widgetsets>
             </manifestEntries>
           </archive>
         </configuration>
