--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -51,6 +51,30 @@
   </dependencies>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.1</version>
+        <executions>
+          <execution>
+            <id>unpack</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                   <groupId>com.vaadin</groupId>
+                   <artifactId>vaadin</artifactId>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.directory}/classes/mgnl-resources</outputDirectory>
+              <includes>VAADIN/themes/**</includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <!-- Compile custom GWT components or widget dependencies with the GWT compiler -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
