fixed compilation error: lazyloadwrapper was missing in dependency section!
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44489 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -21,6 +21,10 @@
       <artifactId>vaadin-treetable</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.vaadin.addons</groupId>
+      <artifactId>lazyloadwrapper</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
       <scope>provided</scope>
