--- a/pom.xml
+++ b/pom.xml
@@ -633,6 +633,12 @@ for Java Content Repositories (JCR).
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>1.8.5</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>net.sourceforge.openutils</groupId>
         <artifactId>openutils-testing4web</artifactId>
         <version>1.2</version>
