--- a/pom.xml
+++ b/pom.xml
@@ -266,7 +266,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin</artifactId>
-        <version>6.5.6</version>
+        <version>6.6.0</version>
       </dependency>
       <dependency>
         <groupId>org.vaadin.addons</groupId>
@@ -286,12 +286,23 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
-        <version>2.1.1</version>
+        <version>2.3.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-dev</artifactId>
-        <version>2.1.1</version>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.0.0.GA</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.0.0.GA</version>
+        <classifier>sources</classifier>
       </dependency>
       <dependency>
         <groupId>com.google.collections</groupId>
