--- a/magnolia-module-templating-components/pom.xml
+++ b/magnolia-module-templating-components/pom.xml
@@ -108,6 +108,11 @@
       <artifactId>htmlunit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.jbehave</groupId>
+    	<artifactId>jbehave-core</artifactId>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <reporting>
     <plugins>
