exclude types com.vaadin.* from checkstyle check (thx 2 Greg)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45065 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -136,6 +136,12 @@
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+         <artifactId>maven-checkstyle-plugin</artifactId>
+         <configuration>
+           <suppressionsLocation>${basedir}/checkstyle-suppressions.xml</suppressionsLocation>
+         </configuration>
+       </plugin>
     </plugins>
   </build>
 </project>
