[SCRUM-42] Vaadin: implement click listener with lower delay in TreeTable
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45128 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -21,6 +21,11 @@
       <artifactId>magnolia-module-wcm</artifactId>
       <version>${project.version}</version>
     </dependency>
+<!--     <dependency> -->
+<!--       <groupId>info.magnolia</groupId> -->
+<!--       <artifactId>magnolia-ui-admincentral</artifactId> -->
+<!--       <version>${project.version}</version> -->
+<!--     </dependency> -->
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
