SCRUM-86 - made sure build does not break because of lack of (check)-style
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45134 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -92,6 +92,12 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+         <artifactId>maven-checkstyle-plugin</artifactId>
+         <configuration>
+           <suppressionsLocation>${basedir}/checkstyle-suppressions.xml</suppressionsLocation>
+         </configuration>
+       </plugin>
     </plugins>
     <resources>
       <resource>
