--- a/magnolia-templating-compatibility/pom.xml
+++ b/magnolia-templating-compatibility/pom.xml
@@ -21,6 +21,11 @@
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+    	<groupId>info.magnolia</groupId>
+    	<artifactId>magnolia-templating</artifactId>
+    	<version>5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
