[maven-release-plugin] prepare release magnolia-5.0-m4-s2
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@45373 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-jaas/pom.xml
+++ b/magnolia-jaas/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m4-s2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s2</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
