--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>magnolia-project</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-project</name>
-  <version>5.0-SNAPSHOT</version>
+  <version>5.0-m4-s2</version>
   <description>
 Magnolia is an open-source enterprise class Content Management System
 developed by Magnolia International Ltd., based on the standard API
@@ -129,9 +129,9 @@ for Java Content Repositories (JCR).
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</connection>
-    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</developerConnection>
-    <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk</url>
+    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/tags/magnolia-5.0-m4-s2</connection>
+    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/tags/magnolia-5.0-m4-s2</developerConnection>
+    <url>http://svn.magnolia-cms.com/view/community/magnolia/tags/magnolia-5.0-m4-s2</url>
   </scm>
   <profiles>
     <profile>
