--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-project</artifactId>
-    <version>5.0-m4-s2</version>
+    <version>5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -73,7 +73,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-ui-model</artifactId>
-      <version>5.0-m4-s2</version>
+      <version>5.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
