--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -18,6 +18,7 @@
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
