--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -38,6 +38,7 @@
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
